// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton animate prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton"
  >
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton avatar prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__avatar mul-skeleton__avatar--round"
      style="width: 1.875rem; height: 1.875rem;"
    />
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton avatarShape prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__avatar mul-skeleton__avatar--square"
      style="width: 2rem; height: 2rem;"
    />
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton avatarSize prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__avatar mul-skeleton__avatar--round"
      style="width: 1.875rem; height: 1.875rem;"
    />
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton loading prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton round prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate mul-skeleton--round"
  >
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton row & rowWidth & titleWidth prop number 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__content"
    >
      <div
        class="mul-skeleton__row"
        style="width: 1.875rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.875rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.875rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.875rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.875rem;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton row & rowWidth & titleWidth prop string 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__content"
    >
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
      <div
        class="mul-skeleton__row"
        style="width: 1.25rem;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton rowWidth prop Array 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__content"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton title prop 1`] = `
<DocumentFragment>
  .c0.mul-skeleton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem;
}

.c0.mul-skeleton .mul-skeleton__avatar {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__avatar--round {
  border-radius: 62.4375rem;
}

.c0.mul-skeleton .mul-skeleton__content {
  width: 100%;
}

.c0.mul-skeleton .mul-skeleton__avatar + .mul-skeleton__content {
  padding-top: 0.5rem;
}

.c0.mul-skeleton .mul-skeleton__row,
.c0.mul-skeleton .mul-skeleton__title {
  height: 1rem;
  background-color: #f2f3f5;
}

.c0.mul-skeleton .mul-skeleton__title {
  margin: 0;
}

.c0.mul-skeleton .mul-skeleton__row:not(:first-child) {
  margin-top: 0.75rem;
}

.c0.mul-skeleton .mul-skeleton__title + .mul-skeleton__row {
  margin-top: 1.25rem;
}

.c0.mul-skeleton--animate {
  -webkit-animation: mul-skeleton-blink 1.2s ease-in-out infinite;
  animation: mul-skeleton-blink 1.2s ease-in-out infinite;
}

.c0.mul-skeleton--round .mul-skeleton__row,
.c0.mul-skeleton--round .mul-skeleton__title {
  border-radius: 62.4375rem;
}

<div
    class="c0 mul-skeleton mul-skeleton--animate"
  >
    <div
      class="mul-skeleton__content"
    >
      <h3
        class="mul-skeleton__title"
        style="width: 40%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
